Quick alignment fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -986,8 +986,7 @@ img.microblog_avatar {
 }
 
 section {
-	padding-top: 0.1rem;
-	padding-bottom: 0.5rem;
+	padding-top: 1.65rem;
 }
 
 /* ============================================================
